try a fix on port for Kafka