@@ -621,9 +621,14 @@ language governing permissions and limitations under the License. -->
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>2.18</version>
                 <configuration>
+                    <forkCount>3</forkCount>
+                    <reuseForks>true</reuseForks>
+                    <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
+                </configuration>
+               <!-- <configuration>
                     <redirectTestOutputToFile>true</redirectTestOutputToFile>
                     <argLine combine.children="append">-Xmx1G -Djava.net.preferIPv4Stack=true</argLine>
-                </configuration>
+                </configuration>-->
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
